@@ -1,3 +1,8 @@
+2009-04-01 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/lib/z80/mul.s: 
+	  Minor improvement in Z80 16x16 bit multiplication.
+
 2009-03-23 Borut Razem <borut.razem AT siol.net>
 
 	* src/SDCCval.c, src/SDCCmain.c, device/include/limits.h,
